DHFPROD-4504: Fixing the bug where it was not throwing any error when saving  mapping artifact with same name in another entity.  (+2 squashed commits) Squashed commits: [9e7a7b182] DHFPROD-4504: Validating Map name based on the response from server [6eb02747b] DHFPROD-4504: Not able to persist mapping artifact with same name in another entity Also fixed the popover issue in one-ui.

--- a/one-ui/ui/src/App.scss
+++ b/one-ui/ui/src/App.scss
@@ -118,7 +118,6 @@ div#error-list div.ant-collapse div.ant-collapse-item div.ant-collapse-content d
 
 .ant-popover {
   position: fixed;
-  z-index: 1;
 }
 
 .react-resizable > .ant-table-header-column {
